# agent-spec

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  install-skills.sh
.agent-spec/wiki/: _architecture.md  _index.md  _log.md  _meta.json  _patterns.md
.github/workflows/: contract-guard-minimal.yml  contract-guard.yml  docs-lint.yml  static.yml
benchmarks/atlas/: agent-ab-experiment-v1.json  agent-ab-plan-v1.json  concurrent-query-receipt-v1.json  corpus.json  query-corpus.json  query-results.json  serving-ab-experiment-v1.json
book/: .gitignore  book.toml
book/book/: 404.html  appendix-a-commands.html  appendix-b-dsl.html  appendix-c-dogfood.html  appendix-d-traces.html  ch01-intent-compiler.html  ch02-first-contract.html  ch03-seven-steps.html  ch04-four-elements.html  ch05-scenario-dsl.html  ch06-lint.html  ch07-lifecycle.html  ch08-boundaries-guard.html  ch09-acceptance.html  ch10-intake.html  ch11-governance.html  ch12-planning.html  ch13-provenance.html  ch14-compile-bind.html  ch15-kll.html  ch16-atlas.html  ch17-wiki-mcp.html  ch18-philosophy.html  ch19-architecture.html  index.html  preface.html  print.html  searcher-09f2665d.js  searchindex-45eb448e.js  searchindex-75b06212.js  searchindex-ab7bcc20.js  toc-98d15170.js  toc.html
book/src/: SUMMARY.md  appendix-a-commands.md  appendix-b-dsl.md  appendix-c-dogfood.md  appendix-d-traces.md  ch01-intent-compiler.md  ch02-first-contract.md  ch03-seven-steps.md  ch04-four-elements.md  ch05-scenario-dsl.md  ch06-lint.md  ch07-lifecycle.md  ch08-boundaries-guard.md  ch09-acceptance.md  ch10-intake.md  ch11-governance.md  ch12-planning.md  ch13-provenance.md  ch14-compile-bind.md  ch15-kll.md  ch16-atlas.md  ch17-wiki-mcp.md  ch18-philosophy.md  ch19-architecture.md  preface.md
books/harness-spec-ai/: book.toml  mermaid-init.js
crates/code-graph-provider/: Cargo.toml  README.md
crates/code-graph-provider/src/: lib.rs
crates/rust-atlas/: Cargo.toml  README.md
crates/rust-atlas/src/: affected.rs  context.rs  dynamic_dispatch.rs  explore.rs  flow.rs  generation.rs  impact.rs  incremental.rs  index.rs  input_plan.rs  lib.rs  live.rs  locking.rs  mir.rs  runtime_boundary.rs  scope.rs  status.rs  sync.rs  traversal.rs  watch.rs
docs/: atlas-agent-ab-gate.md  atlas-concurrent-query-serving.md  atlas-dynamic-dispatch.md  atlas-evaluation.md  atlas-incremental-builds.md  atlas-live-runtime.md  atlas-mir-overlay.md  atlas-query-context.md  atlas-roadmap.md  atlas-runtime-boundaries.md  bdd-spine-end-state.md  book-outline.md  cfp-v0.3.md  code-graph-provider-kit.md  comparison-openspec-speckit.md  index.html  phase-1-retrospective.md  phase-2-retrospective.md  phase-3-retrospective.md  phase-4-retrospective.md  phase-5-retrospective.md  phase-6-retrospective.md  phase-6.5-retrospective.md  phase-7-retrospective.md  phase-8-retrospective.md  phase-9-retrospective.md  phase-retrospective-template.md  releasing.md
docs/atlas-schemas/: mir-overlay-v1.schema.json
docs/intent-compiler/: architecture.md  dogfood-rust-atlas.md  external-consumers.md  reference-validation-matrix.md  yaml-frontend-v1.md
fixtures/requirements-noteapp/: Cargo.toml  README.md
fixtures/requirements-parity/: requirements.yaml
fixtures/requirements-yaml/: requirements.yaml
fixtures/wiki-cross-project/: Cargo.toml
fixtures/wiki-mini/: Cargo.toml
knowledge/context/: spec-archives.md
knowledge/decisions/: adr-001-orchestrator-neutral-core.md
knowledge/proposals/: proposal-template.md
knowledge/requirements/: req-affected-execution-bundle.md  req-affected-failure-replay.md  req-agent-spec-book.md  req-arc-native-dialect.md  req-atlas-agent-ab-gate.md  req-atlas-agent-evaluation.md  req-atlas-concurrent-query-serving.md  req-atlas-dynamic-dispatch.md  req-atlas-edge-evidence-index.md  req-atlas-explore-flow-impact.md  req-atlas-incremental-hardening.md  req-atlas-live-runtime.md  req-atlas-mir-overlay.md  req-atlas-query-context-compiler.md  req-atlas-query-quality-regression.md  req-atlas-runtime-boundary-hints.md  req-atlas-scip-semantic.md  req-atlas-worktree-freshness.md  req-autowiki-living-docs.md  req-code-graph-ir.md  req-code-graph-provider-kit.md  req-code-live-wiki-deepening.md  req-code-live-wiki.md  req-compiler-machine-surface.md  req-cross-project-wiki.md  (+14 more)
scripts/: docs-lint.sh
specs/: task-affected-execution-bundle.spec.md  task-affected-failure-replay.spec.md  task-agent-spec-book.spec.md  task-arc-native-dialect.spec.md  task-atlas-agent-ab-gate.spec.md  task-atlas-agent-evaluation.spec.md  task-atlas-concurrent-query-serving.spec.md  task-atlas-dynamic-dispatch.spec.md  task-atlas-edge-evidence-index.spec.md  task-atlas-explore-flow-impact.spec.md  task-atlas-incremental-hardening.spec.md  task-atlas-kll-integration.spec.md  task-atlas-live-runtime.spec.md  task-atlas-mir-layer.spec.md  task-atlas-query-context-compiler.spec.md  task-atlas-query-quality-regression.spec.md  task-atlas-runtime-boundary-hints.spec.md  task-atlas-scip-semantic.spec.md  task-atlas-worktree-layered-freshness.spec.md  task-audit-v1.spec.md  task-bdd-semantics-v1.spec.md  task-capability-promote-v1.spec.md  task-code-graph-ir-bindings.spec.md  task-code-graph-provider-kit.spec.md  task-code-live-wiki-deepening.spec.md  task-code-live-wiki.spec.md  task-compiler-machine-surface.spec.md  task-coverage-matrix-v1.spec.md  task-cross-project-wiki.spec.md  task-discover-from-codebase-v1.spec.md  task-discovery-questions-v1.spec.md  task-gen-integrations-v1.spec.md  task-intent-aware-affected.spec.md  task-intent-compiler-provenance-manifest.spec.md  task-intent-compiler-yaml-export.spec.md  task-intent-compiler-yaml-frontend.spec.md  task-lint-ack-dimensions-v1.spec.md  task-probe-abstraction-v1.spec.md  task-provenance-run-hardening.spec.md  task-quality-planning-bundles.spec.md  (+8 more)
src/: atlas_agent_eval.rs  atlas_daemon.rs  atlas_eval.rs  atlas_query_service.rs  main.rs  spec_archive.rs  spec_qa.rs
tests/: contract_guard_workflow.rs
(+270 files in other folders)
