[package]
name = "agent-spec-code-graph-provider"
description = "Provider-neutral Code Graph adapter types, bounded process execution, and conformance gates for agent-spec"
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ZhangHanDong/agent-spec"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

