[package]
name = "rust-atlas"
description = "Evidence-aware Rust code graph for AI agents with incremental generations, SCIP/MIR overlays, bounded queries, and freshness gates"
edition = "2024"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/ZhangHanDong/agent-spec"

[features]
default = []
mir = []

[dependencies]
blake3 = "1"
fs2 = "0.4"
getrandom = "0.4"
ignore = "0.4"
notify = "8.2"
proc-macro2 = { version = "1", features = ["span-locations"] }
protobuf = "3"
quote = "1"
scip = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
thiserror = "2"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
